--- a/threejs/index.html
+++ b/threejs/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
